// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/15/2010
	r107 [LimitLine]
	* Added chance to change enemy's element to Poison with Cloud Kill.
	* Fixed Cloud Kill not dealing damage.
	* Changed Vacuum Extreme's unit ID to the correct one.
	* Changed Warmer's unit ID to the correct one.
	* Other minor changes.

	r106 [LimitLine]
	* Now spells used trough Reading Spellbooks will consume the correct amount of Preserve points (before: every skill consumed only one, regardless).
	- You can change the number of preserve points a skill takes up in db/spellbook_db.txt
	* Fixed my last changelog entries. Sorry.

	r105 [LimitLine]
	* Fixed Chain Lightning hitting allies.
	* Fixed Freezing duration trough Frost Misty.
	* Fixed Demonic Fire hitting everyone.

01/11/2010
	r100 [Jobbie]
	* Added RA_CAMOUFLAGE skill.
	* Added renewal_cast_enable setting. Read inside skill.conf about its functionality.
	* Fixed damage calculation for Firing, Icebound and Clusterbomb Trap.
	* Cleaned up unit function of Hunter and Ranger Traps.
	* Removed Freeze and Stone status in status_change_spread as its not included to the status to be spreaded.
	* Fixed items that are not updated to the recent job system.

01/09/2010
	r97 [pakpil]
	* Minor fix in my last commit. Sorry.

	r96 [pakpil]
	* Added skill SC_AUTOSHADOWSPELL.

01/08/2010
	r95 [pakpil]
	* Added Shadow Chaser's skills: SC_REPRODUCE, SC_BLOODYLUST.
	* Minor fix in RK_GIANTGROWTH.
	* Added two packets: 
	- clif_addskill to add a skill to the skill info window
	- clif_skillinfo_delete to remove a skill from the skill info window.

	r94 [pakpil]
	* Added some Shadow Chaser's skills: SC_BODYPAINT, SC_INVISIBILITY, SC_DEADLYINFECT, SC_ENERVATION, SC_GROOMY,
	  SC_IGNORANCE, SC_LAZINESS, SC_UNLUCKY, SC_WEAKNESS, SC_STRIPACCESSARY, SC_MANHOLE, SC_SIMENSIONDOOR and SC_CHAOSPANIC.

12/29/2009
	r85 [pakpil]
	* Added SC_STRIPACCESSARY.